--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <title>Ancient Cost Calculator</title>
+
+  <!-- Open Graph (Discord, Facebook, LinkedIn, etc.) -->
+  <meta property="og:title" content="Ancient Cost Calculator" />
+  <meta property="og:description" content="Calculate the optimal cost and strategy for fully Ancienting items." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://levorsomething.github.io/Ancient-Calculator/"  />
+  <meta property="og:image" content="https://raw.githubusercontent.com/LevOrSomething/Ancient-Calculator/main/Ancient_Scroll.png" />
+
+<!-- Twitter / X -->
+  <meta name="twitter:card" content="" />
+  <meta name="twitter:title" content="Ancient Cost Calculator" />
+  <meta name="twitter:description" content="Calculate the optimal cost and strategy for fully Ancienting items." />
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/LevOrSomething/Ancient-Calculator/main/Ancient_Scroll.png" />
+
+  
   <style>
     body {
       margin: 0;
