--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <title>Ancient Cost Calculator</title>
 
   <!-- Open Graph (Discord, Facebook, LinkedIn, etc.) -->
-  <meta property="og:title" content="Ancient Cost Calculator" />
-  <meta property="og:description" content="Calculate the optimal cost and strategy for fully Ancienting items." />
+  <meta property="og:title" content="Lev's Ancient Calculator" />
+  <meta property="og:description" content="Calculate the average cost of Ancienting your desired item, as well as the optimal strategy for doing so, with this website. It will tell you when to use Resets and when to use Mag Holies, all using Properties of Binomial Distributions, and weighted averages of pre-computed solutions to absobant Markov chains (Ew, maths). Anyway, enjoy! (Join Star) " />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://levorsomething.github.io/Ancient-Calculator/"  />
   <meta property="og:image" content="https://raw.githubusercontent.com/LevOrSomething/Ancient-Calculator/main/Ancient_Scroll.png" />
 
 <!-- Twitter / X -->
   <meta name="twitter:card" content="" />
-  <meta name="twitter:title" content="Ancient Cost Calculator" />
-  <meta name="twitter:description" content="Calculate the optimal cost and strategy for fully Ancienting items." />
+  <meta name="twitter:title" content="Lev's Ancient Calculator" />
+  <meta name="twitter:description" content="Calculate the average cost and optimal strategy for fully Ancienting items." />
   <meta name="twitter:image" content="https://raw.githubusercontent.com/LevOrSomething/Ancient-Calculator/main/Ancient_Scroll.png" />
 
   
