--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <!-- Open Graph (Discord, Facebook, LinkedIn, etc.) -->
   <meta property="og:title" content="Lev's Ancient Calculator" />
-  <meta property="og:description" content="Calculate the average cost of Ancienting your desired item, as well as the optimal strategy for doing so, with this website. It will tell you when to use Resets and when to use Mag Holies, all using Properties of Binomial Distributions, and weighted averages of pre-computed solutions to absobant Markov chains (Ew, maths). Anyway, enjoy! (Join Star) " />
+  <meta property="og:description" content="Calculate the average cost of Ancienting items as well as the optimal strategy for doing so, with this website. It will tell you when to use Resets and when to use Mag Holies, all using Properties of Binomial Distributions, and weighted averages of pre-computed solutions to absobant Markov chains (Ew, maths). Anyway, enjoy! (Join Star) " />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://levorsomething.github.io/Ancient-Calculator/"  />
   <meta property="og:image" content="https://raw.githubusercontent.com/LevOrSomething/Ancient-Calculator/main/Ancient_Scroll.png" />
